...
        android:textColor="@color/lightBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fingerprint_auth_add_btn" />

    <Button
        android:id="@+id/btn_start_authentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button_light"
        android:text="@string/start_fingerprint_authentication"
        android:textColor="@color/lightBlack"
...
