...
    <string name="use_your_contacts_list">use your contacts list</string>
    <string name="edit_profile">Edit profile</string>
    <string name="enter_your_choice_yes_or_no">Enter your choice, YES or NO</string>
    <string name="fingerprint_authentication">Fingerprint authentication</string>
    <string name="authentication_message">authentication_message</string>
    <string name="go_to_home_page">Go to home page</string>
    <string name="start_fingerprint_authentication">start fingerprint authentication</string>
    <string name="authentication_result_message">authentication_result_message</string>
    <string name="add">ADD</string>
    <string name="maybe_later">MAYBE LATER</string>
    <string name="i_supervise">I supervise</string>
    <string name="supervising_me">supervising me</string>
    <string name="email">Email</string>
...
